added some inhancements to quiz

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
       content="Online education platform for students and teachers"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <title>Eduvation</title>
-    <link
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
+    /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
